src/objects/Mercury_Marketing_Cloud_Settings_MERC__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Settings for the Mercury Project integration with Marketing Cloud</description>
    <fields>
        <fullName>Application_ID_MERC__c</fullName>
        <defaultValue>&quot;6C7F3A46-9BFD-40E9-87EE-456577D4FFE7&quot;</defaultValue>
        <description>Application ID used by the MERC_Marketing_Cloud_Client.SoapClient to authenticate.</description>
        <inlineHelpText>Application ID used by the MERC_Marketing_Cloud_Client.SoapClient to authenticate.</inlineHelpText>
        <label>Application ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Name_MERC__c</fullName>
        <defaultValue>&quot;LLY-MED-GLO-Customer Meeting Services&quot;</defaultValue>
        <description>Specifies the business unit (et4ae5__Business_Unit__c) to use when making Marketing Cloud API calls in MERC_MarketingCloudClient.</description>
        <inlineHelpText>Specifies the business unit (et4ae5__Business_Unit__c) to use when making Marketing Cloud API calls in MERC_MarketingCloudClient.</inlineHelpText>
        <label>Business Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Country_MERC__c</fullName>
        <defaultValue>&quot;US&quot;</defaultValue>
        <description>The default country code to send emails from. For Automatic Registration Confirmation emails, this is if the Meeting Participant&apos;s Country does not have the particular Email Template.</description>
        <inlineHelpText>The default country code to send emails from. For Automatic Registration Confirmation emails, this is if the Meeting Participant&apos;s Country does not have the particular Email Template.</inlineHelpText>
        <label>Default Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Send_Classification_MERC__c</fullName>
        <defaultValue>&quot;Mercury Transactional&quot;</defaultValue>
        <description>The key of the default Send Classification for Email Sends created by MarketingCloudService</description>
        <inlineHelpText>The key of the default Send Classification for Email Sends created by MarketingCloudService</inlineHelpText>
        <label>Default Send Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Root_Path_MERC__c</fullName>
        <defaultValue>&quot;My Emails&quot;</defaultValue>
        <description>The root path for emails in Marketing Cloud. Typically this is &quot;My Emails/&quot; where a full path to an email is &quot;My Emails/GB/Registration Confirmation&quot;</description>
        <inlineHelpText>The root path for emails in Marketing Cloud. Typically this is &quot;My Emails/&quot; where a full path to an email is &quot;My Emails/GB/Registration Confirmation&quot;</inlineHelpText>
        <label>Email Root Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Integration_Type_MERC__c</fullName>
        <defaultValue>&quot;Enterprise2.0&quot;</defaultValue>
        <description>Determines if the integration is &quot;enterprise&quot; by matching against (et4ae5__integration_type__c).</description>
        <inlineHelpText>Determines if the integration is &quot;enterprise&quot; by matching against (et4ae5__integration_type__c).</inlineHelpText>
        <label>Enterprise Integration Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_API_Auth_Root_URL_MERC__c</fullName>
        <defaultValue>&quot;https://auth.exacttargetapis.com&quot;</defaultValue>
        <description>The root url for acquire authorization for the fuel API.</description>
        <inlineHelpText>The root url for acquire authorization for the fuel API.</inlineHelpText>
        <label>Fuel API Auth Root URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_API_Client_ID_MERC__c</fullName>
        <defaultValue>&quot;jsemj72hixy2qx1yp27lb59o&quot;</defaultValue>
        <description>The Client ID to use when connecting to the Fuel API. The client ID and secret for the Fuel API is managed at https://appcenter-auth.exacttargetapps.com</description>
        <inlineHelpText>The Client ID to use when connecting to the Fuel API. The client ID and secret for the Fuel API is managed at https://appcenter-auth.exacttargetapps.com</inlineHelpText>
        <label>Fuel API Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_API_Client_Secret_MERC__c</fullName>
        <defaultValue>&quot;DRfQ1K3NzeOxxdJEXDOUK4n2&quot;</defaultValue>
        <description>The Client Secret to use when connecting to the Fuel API. The client ID and secret for the Fuel API is managed at https://appcenter-auth.exacttargetapps.com</description>
        <inlineHelpText>The Client Secret to use when connecting to the Fuel API. The client ID and secret for the Fuel API is managed at https://appcenter-auth.exacttargetapps.com</inlineHelpText>
        <label>Fuel API Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_API_Root_URL_MERC__c</fullName>
        <defaultValue>&quot;https://www.exacttargetapis.com&quot;</defaultValue>
        <description>The root url used when calling the Fuel API.</description>
        <inlineHelpText>The root url used when calling the Fuel API.</inlineHelpText>
        <label>Fuel API Root URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Confirmation_Email_MERC__c</fullName>
        <defaultValue>&quot;Registration Confirmation&quot;</defaultValue>
        <description>The name of the Email from Marketing Cloud to use as the template for Meeting Registration Confirmations.</description>
        <inlineHelpText>The name of the Email from Marketing Cloud to use as the template for Meeting Registration Confirmations.</inlineHelpText>
        <label>Registration Confirmation Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Profile_Prefix_Filter_MERC__c</fullName>
        <defaultValue>&quot;MERC&quot;</defaultValue>
        <description>Filters Sender Profiles on the Meeting Email Send page based on whether or not their Name &quot;profileName&quot; starts with this value.</description>
        <inlineHelpText>Filters Sender Profiles on the Meeting Email Send page based on whether or not their Name &quot;profileName&quot; starts with this value.</inlineHelpText>
        <label>Sender Profile Prefix Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thumbnail_Height_MERC__c</fullName>
        <defaultValue>300</defaultValue>
        <description>The height of the thumbnail requested when sending an email.</description>
        <inlineHelpText>The height of the thumbnail requested when sending an email.</inlineHelpText>
        <label>Thumbnail Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thumbnail_Width_MERC__c</fullName>
        <defaultValue>300</defaultValue>
        <description>The width of the thumbnail requested when sending an email. Warning, Thumbnails over 300x300 may be too large to process.</description>
        <inlineHelpText>The width of the thumbnail requested when sending an email. Warning, Thumbnails over 300x300 may be too large to process.</inlineHelpText>
        <label>Thumbnail Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Mercury Marketing Cloud Settings</label>
</CustomObject>